# monolith_django

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deployment/local/: docker-compose.yml
postman/: Pets API.postman_collection.json
src/: manage.py  run_uvicorn.py
src/accounts/: admin.py  urls.py
src/accounts/migrations/: 0001_initial.py
src/accounts/models/: __init__.py  role_model.py  user_model.py
src/accounts/permissions/: __init__.py  user_permission.py
src/accounts/serializers/: __init__.py  login_user_serializer.py  register_user_serializer.py  user_serializer.py
src/accounts/services/: __init__.py  jwt_authentication_service.py  jwt_service.py  user_service.py  user_services.py
src/accounts/views/: __init__.py  login_view.py  register_view.py  users_view.py
src/app/: settings.py  urls.py
src/jwt_roles/: apps.py
src/pets/: urls.py
src/pets/migrations/: 0001_initial.py
src/pets/models/: __init__.py  pet_model.py
src/pets/permissions/: __init__.py  pets_permission.py  pets_permissions.py
src/pets/serializers/: __init__.py  pet_serializer.py
src/pets/views/: __init__.py  pet_views.py
